# my-scribble

./: =
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs  websocket.rs
frontend/: package-lock.json
frontend/src/: App.svelte
frontend/src/components/: Canvas.svelte
frontend/src/lib/: types.ts  websocket.ts
